// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Appointment Picker Default 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="storyBackground"
  >
    <div
      className="dayTitle"
    >
      יום ראשון, 13/06/2021
    </div>
    <div
      className="hospitalName"
    >
      תל השומר
       
    </div>
    <div
      className="hospitalCard"
    >
      <div>
        <div
          className="pickerLabel"
        />
        <div
          className="pickerButtons"
        >
          <div
            className="pickerButtonContainer"
          >
            <div
              className="pickerButton"
              color="default"
              onClick={[Function]}
            >
              12:00
            </div>
          </div>
          <div
            className="pickerButtonContainer"
          >
            <div
              className="pickerButton"
              color="default"
              onClick={[Function]}
            >
              12:45
            </div>
          </div>
          <div
            className="pickerButtonContainer"
          >
            <div
              className="pickerButton"
              color="default"
              onClick={[Function]}
            >
              13:30
            </div>
          </div>
          <div
            className="pickerButtonContainer"
          >
            <div
              className="pickerButton"
              color="default"
              onClick={[Function]}
            >
              14:15
            </div>
          </div>
          <div
            className="pickerButtonContainer"
          >
            <div
              className="pickerButton"
              color="default"
              onClick={[Function]}
            >
              15:00
            </div>
          </div>
          <div
            className="pickerButtonContainer"
          >
            <div
              className="pickerButton"
              color="default"
              onClick={[Function]}
            >
              15:45
            </div>
          </div>
          <div
            className="pickerButtonContainer"
          >
            <div
              className="pickerButton"
              color="default"
              onClick={[Function]}
            >
              16:30
            </div>
          </div>
          <div
            className="pickerButtonContainer"
          >
            <div
              className="pickerButton"
              color="default"
              onClick={[Function]}
            >
              17:15
            </div>
          </div>
          <div
            className="pickerButtonContainer"
          >
            <div
              className="pickerButton"
              color="default"
              onClick={[Function]}
            >
              18:00
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="hospitalName"
    >
      הדסה עין כרם
       
    </div>
    <div
      className="hospitalCard"
    >
      <div>
        <div
          className="pickerLabel"
        />
        <div
          className="pickerButtons"
        >
          <div
            className="pickerButtonContainer"
          >
            <div
              className="pickerButton"
              color="default"
              onClick={[Function]}
            >
              12:00
            </div>
          </div>
          <div
            className="pickerButtonContainer"
          >
            <div
              className="pickerButton"
              color="default"
              onClick={[Function]}
            >
              12:45
            </div>
          </div>
          <div
            className="pickerButtonContainer"
          >
            <div
              className="pickerButton"
              color="default"
              onClick={[Function]}
            >
              13:30
            </div>
          </div>
          <div
            className="pickerButtonContainer"
          >
            <div
              className="pickerButton"
              color="default"
              onClick={[Function]}
            >
              14:15
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Appointment Picker No Hospital Name 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="storyBackground"
  >
    <div
      className="dayTitle"
    >
      יום ראשון, 13/06/2021
    </div>
    <div
      className="hospitalCard"
    >
      <div>
        <div
          className="pickerLabel"
        />
        <div
          className="pickerButtons"
        >
          <div
            className="pickerButtonContainer"
          >
            <div
              className="pickerButton"
              color="default"
              onClick={[Function]}
            >
              12:00
            </div>
          </div>
          <div
            className="pickerButtonContainer"
          >
            <div
              className="pickerButton"
              color="default"
              onClick={[Function]}
            >
              12:45
            </div>
          </div>
          <div
            className="pickerButtonContainer"
          >
            <div
              className="pickerButton"
              color="default"
              onClick={[Function]}
            >
              13:30
            </div>
          </div>
          <div
            className="pickerButtonContainer"
          >
            <div
              className="pickerButton"
              color="default"
              onClick={[Function]}
            >
              14:15
            </div>
          </div>
          <div
            className="pickerButtonContainer"
          >
            <div
              className="pickerButton"
              color="default"
              onClick={[Function]}
            >
              15:00
            </div>
          </div>
          <div
            className="pickerButtonContainer"
          >
            <div
              className="pickerButton"
              color="default"
              onClick={[Function]}
            >
              15:45
            </div>
          </div>
          <div
            className="pickerButtonContainer"
          >
            <div
              className="pickerButton"
              color="default"
              onClick={[Function]}
            >
              16:30
            </div>
          </div>
          <div
            className="pickerButtonContainer"
          >
            <div
              className="pickerButton"
              color="default"
              onClick={[Function]}
            >
              17:15
            </div>
          </div>
          <div
            className="pickerButtonContainer"
          >
            <div
              className="pickerButton"
              color="default"
              onClick={[Function]}
            >
              18:00
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
